--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,118 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
 
 <html lang="nl">
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>De Zoo</title>
-        <!-- CSS links -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-        <link rel="stylesheet" href="./css/index.css">
-    </head>
 
-    <body>
-        <h1>De zoo</h1>
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>De Zoo</title>
+	<!-- CSS links -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<link rel="stylesheet" href="./css/index.css">
+</head>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    </body>
+<body>
+	<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-success">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#">De Zoo</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="#">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="#dieren">Dieren</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
+	<main class="container">
+		<h1>De Zoo</h1>
+		<p>Op deze pagina kunt u onze zoo api aanspreken.</p>
+
+		<div id="dieren">
+			<h2>Dieren</h2>
+			Hieronder kunt u de dieren bekijken, bewerken nieuwe dieren toevoegen of verwijderen.
+			<table id="animalTable" class="table table-striped">
+				<thead>
+					<tr>
+						<th>#</th>
+						<th>Still</th>
+						<th>To</th>
+						<th>Do</th>
+					</tr>
+				</thead>
+				<tbody>
+				</tbody>
+			</table>
+		</div>
+		<div id="verblijven" class="mt-3">
+			<h2>Verblijven</h2>
+			Hieronder kunt u de verblijven bekijken, bewerken, nieuwe verblijven toevoegen of verwijderen.
+			<table id="animalTable" class="table table-striped">
+				<thead>
+					<tr>
+						<th>#</th>
+						<th>Still</th>
+						<th>To</th>
+						<th>Do</th>
+					</tr>
+				</thead>
+				<tbody>
+				</tbody>
+			</table>
+		</div>
+		<div id="personeel" class="mt-3">
+			<h2>Personeel</h2>
+			Hieronder kunt u de personeelsleden bekijken, bewerken, nieuwe personeelslid toevoegen of verwijderen.
+			<table id="animalTable" class="table table-striped">
+				<thead>
+					<tr>
+						<th>#</th>
+						<th>Personeels categorie</th>
+						<th>Voornaam</th>
+						<th>Naam</th>
+						<th>Geboortedatum</th>
+						<th>Adres</th>
+						<th>Postcode</th>
+						<th>Telefoon nummer</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>fs161100</td>
+						<td>Administratie</td>
+						<td>Ferre</td>
+						<td>Snyers</td>
+						<td>16/11/2000</td>
+						<td>Gestelstraat 21</td>
+						<td>2250</td>
+						<td>+32 498/44 14 39</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</main>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+		crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script src="./js/index.js"></script>
+	<script>
+		// $(function () {
+		// 	getPersoneel();
+		// 	console.log("test")
+		// })
+	</script>
+</body>
+
 </html>
