--- a/public/index.html
+++ b/public/index.html
@@ -228,7 +228,7 @@
 									<label for="postalCode">Postcode</label>
 								</div>
 								<div class="form-floating mb-3">
-									<input type="number" class="form-control" id="telephoneNumber"
+									<input type="tel" class="form-control" id="telephoneNumber"
 										placeholder="Telefoonnummer">
 									<label for="telephoneNumber">Telefoonnummer</label>
 								</div>
